--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "prosemirror-model": "^1.19.3",
     "prosemirror-state": "^1.4.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.12",
+    "react-persistent-state": "^1.1.13",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "6.11.2",
     "react-use": "^17.4.0",
+    "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "vite-plugin-ejs": "^1.6.4",
